# holonomy-consensus

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: README.md  benchmark_results.md  ci-results.md
docs/reviews/: 2026-05-17-readme-added.md
examples/: basic_consensus.py  byzantine_detection.py  fleet_scaling.py
src/: benchmarks.rs  cohomology.rs  consensus.rs  constraints.rs  encoding.rs  lib.rs  lifecycle.rs  trust_lifecycle.rs  zhc_gl9.rs
tests/: consensus_tests.rs  integration.rs
