[package]
name = "holonomy-consensus"
version = "0.2.0"
edition = "2021"
description = "Zero-holonomy consensus for fleet coordination — GL(9) intent alignment, eliminates voting/CRDTs/BFT"
repository = "https://github.com/SuperInstance/holonomy-consensus"
license = "Apache-2.0"
authors = ["SuperInstance <forgemaster@superinstance.com>"]
keywords = ["consensus", "holonomy", "distributed", "fleet", "alignment"]
categories = ["algorithms", "network-programming", "science"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
